--- a/app.json
+++ b/app.json
@@ -4,9 +4,16 @@
   "expo": {
     "name": "daily-questions",
     "slug": "daily-questions",
+    "orientation": "default",
     "version": "1.0.0",
-    "assetBundlePatterns": [
-      "**/*"
-    ]
+    "assetBundlePatterns": ["**/*"],
+    "privacy": "public",
+    "android": {
+      "package": "eu.kraenz.dailyquestions",
+      "permissions": [],
+      "versionCode": 1,
+      "useNextNotificationsApi": true
+    },
+    "description": "Marshall Goldsmith's Daily Engagement Questions as an inofficial app"
   }
 }
