--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "react-native start",
+    "dev": "expo start",
+    "dev:clear-cache": "expo start --clear",
+    "build": "tsc",
+    "build:watch": "tsc -w",
     "test": "jest"
   },
   "dependencies": {
     "expo": "~41.0.1",
-    "expo-updates": "~0.5.4",
     "expo-splash-screen": "~0.10.2",
+    "expo-updates": "~0.5.4",
+    "lodash": "^4.17.21",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "~0.63.4",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-paper": "^4.11.2",
     "react-native-reanimated": "~2.1.0",
     "react-native-screens": "~3.0.0",
     "react-native-unimodules": "~0.13.3",
@@ -24,6 +30,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/lodash": "^4.14.178",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "babel-preset-expo": "~8.3.0",
