--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
-    "strict": true
+    "strict": true,
+    "noEmit": true,
+    "jsx": "react-native",
+    "lib": ["dom", "esnext"],
+    "allowSyntheticDefaultImports": true,
+    "allowJs": false
   }
 }
