--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "babel-preset-expo": "~8.3.0",
+    "expo-cli": "^5.2.0",
     "jest-expo": "~41.0.0",
     "typescript": "~4.0.0"
   },
