chore(1): upgrade expo to 42.0.0

--- a/package.json
+++ b/package.json
@@ -14,28 +14,28 @@
     "test": "jest"
   },
   "dependencies": {
-    "expo": "~41.0.1",
-    "expo-splash-screen": "~0.10.2",
-    "expo-updates": "~0.5.4",
+    "expo": "^42.0.0",
+    "expo-splash-screen": "~0.11.2",
+    "expo-updates": "~0.8.2",
     "lodash": "^4.17.21",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "~0.63.4",
+    "react-native": "0.63.4",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.11.2",
-    "react-native-reanimated": "~2.1.0",
-    "react-native-screens": "~3.0.0",
-    "react-native-unimodules": "~0.13.3",
+    "react-native-reanimated": "~2.2.0",
+    "react-native-screens": "~3.4.0",
+    "react-native-unimodules": "~0.14.5",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "~7.9.0",
     "@types/lodash": "^4.14.178",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
-    "babel-preset-expo": "~8.3.0",
+    "babel-preset-expo": "8.3.0",
     "expo-cli": "^5.2.0",
-    "jest-expo": "~41.0.0",
+    "jest-expo": "^42.0.1",
     "typescript": "~4.0.0"
   },
   "jest": {
