--- a/package.json
+++ b/package.json
@@ -14,29 +14,29 @@
     "test": "jest"
   },
   "dependencies": {
-    "expo": "^42.0.0",
-    "expo-splash-screen": "~0.11.2",
-    "expo-updates": "~0.8.2",
+    "expo": "^43.0.0",
+    "expo-splash-screen": "~0.13.5",
+    "expo-updates": "~0.10.15",
     "lodash": "^4.17.21",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "0.63.4",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "react-native": "0.64.3",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-paper": "^4.11.2",
     "react-native-reanimated": "~2.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-unimodules": "~0.14.5",
-    "react-native-web": "~0.13.12"
+    "react-native-screens": "~3.8.0",
+    "react-native-unimodules": "~0.15.0",
+    "react-native-web": "0.17.1"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0",
+    "@babel/core": "^7.12.9",
     "@types/lodash": "^4.14.178",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
-    "babel-preset-expo": "8.3.0",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
+    "babel-preset-expo": "8.5.1",
     "expo-cli": "^5.2.0",
-    "jest-expo": "^42.0.1",
-    "typescript": "~4.0.0"
+    "jest-expo": "~43.0.1",
+    "typescript": "~4.3.5"
   },
   "jest": {
     "preset": "react-native"
