--- a/package.json
+++ b/package.json
@@ -14,17 +14,17 @@
     "test": "jest"
   },
   "dependencies": {
-    "expo": "^43.0.0",
-    "expo-splash-screen": "~0.13.5",
-    "expo-updates": "~0.10.15",
+    "expo": "^44.0.0",
+    "expo-splash-screen": "~0.14.1",
+    "expo-updates": "~0.11.7",
     "lodash": "^4.17.21",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "~2.1.0",
     "react-native-paper": "^4.11.2",
-    "react-native-reanimated": "~2.2.0",
-    "react-native-screens": "~3.8.0",
+    "react-native-reanimated": "~2.3.1",
+    "react-native-screens": "~3.10.1",
     "react-native-unimodules": "~0.15.0",
     "react-native-web": "0.17.1"
   },
@@ -33,9 +33,9 @@
     "@types/lodash": "^4.14.178",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.64.12",
-    "babel-preset-expo": "8.5.1",
+    "babel-preset-expo": "9.0.2",
     "expo-cli": "^5.2.0",
-    "jest-expo": "~43.0.1",
+    "jest-expo": "^44.0.0",
     "typescript": "~4.3.5"
   },
   "jest": {
