--- a/package.json
+++ b/package.json
@@ -14,28 +14,28 @@
     "test": "jest"
   },
   "dependencies": {
-    "expo": "^44.0.0",
-    "expo-splash-screen": "~0.14.1",
-    "expo-updates": "~0.11.7",
+    "expo": "^45.0.0",
+    "expo-splash-screen": "~0.15.1",
+    "expo-updates": "~0.13.2",
     "lodash": "^4.17.21",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
-    "react-native-gesture-handler": "~2.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-native": "0.68.2",
+    "react-native-gesture-handler": "~2.2.1",
     "react-native-paper": "^4.11.2",
-    "react-native-reanimated": "~2.3.1",
-    "react-native-screens": "~3.10.1",
+    "react-native-reanimated": "~2.8.0",
+    "react-native-screens": "~3.11.1",
     "react-native-unimodules": "~0.15.0",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/lodash": "^4.14.178",
     "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
-    "babel-preset-expo": "9.0.2",
+    "@types/react-native": "~0.67.6",
+    "babel-preset-expo": "~9.1.0",
     "expo-cli": "^5.2.0",
-    "jest-expo": "^44.0.0",
+    "jest-expo": "^45.0.0",
     "typescript": "~4.3.5"
   },
   "jest": {
