--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
   },
   "dependencies": {
     "expo": "^45.0.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-updates": "~0.13.2",
+    "expo-splash-screen": "^0.15.1",
+    "expo-updates": "^0.13.2",
     "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-gesture-handler": "~2.2.1",
-    "react-native-paper": "^4.11.2",
+    "react-native-paper": "^4.12.1",
     "react-native-reanimated": "~2.8.0",
     "react-native-screens": "~3.11.1",
     "react-native-unimodules": "~0.15.0",
@@ -30,13 +30,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
-    "@types/lodash": "^4.14.178",
+    "@types/lodash": "^4.14.182",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
     "babel-preset-expo": "~9.1.0",
-    "expo-cli": "^5.2.0",
-    "jest-expo": "^45.0.0",
-    "typescript": "~4.3.5"
+    "expo-cli": "^5.4.11",
+    "jest-expo": "^45.0.1",
+    "typescript": "^4.7.3"
   },
   "jest": {
     "preset": "react-native"
