--- a/app.json
+++ b/app.json
@@ -5,14 +5,13 @@
     "name": "daily-questions",
     "slug": "daily-questions",
     "orientation": "default",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "assetBundlePatterns": ["**/*"],
     "privacy": "public",
     "android": {
       "package": "eu.kraenz.dailyquestions",
       "permissions": [],
-      "versionCode": 1,
-      "useNextNotificationsApi": true
+      "versionCode": 2
     },
     "description": "Marshall Goldsmith's Daily Engagement Questions as an inofficial app"
   }
