--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "expo": "^45.0.0",
     "expo-splash-screen": "^0.15.1",
+    "expo-status-bar": "~1.3.0",
     "expo-updates": "^0.13.2",
     "lodash": "^4.17.21",
     "react": "17.0.2",
@@ -26,8 +28,7 @@
     "react-native-paper": "^4.12.1",
     "react-native-reanimated": "~2.8.0",
     "react-native-screens": "~3.11.1",
-    "react-native-web": "0.17.7",
-    "expo-status-bar": "~1.3.0"
+    "react-native-web": "0.17.7"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
