--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-navigation/drawer": "^6.4.1",
+    "@react-navigation/native": "^6.0.10",
     "expo": "^45.0.0",
     "expo-splash-screen": "^0.15.1",
     "expo-status-bar": "~1.3.0",
@@ -30,6 +32,7 @@
     "react-native-gesture-handler": "~2.2.1",
     "react-native-paper": "^4.12.1",
     "react-native-reanimated": "~2.8.0",
+    "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-web": "0.17.7"
   },
