chore: npm license field

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "daily-questions",
   "version": "1.0.0",
+  "license": "MIT",
   "main": "index.js",
   "scripts": {
     "android": "react-native run-android",
