--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
+    "@reduxjs/toolkit": "^1.8.2",
     "expo": "^45.0.0",
     "expo-splash-screen": "^0.15.1",
     "expo-status-bar": "~1.3.0",
@@ -37,13 +38,15 @@
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.7"
+    "react-native-web": "0.17.7",
+    "react-redux": "^8.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "@types/lodash": "^4.14.182",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
+    "@types/react-redux": "^7.1.24",
     "babel-preset-expo": "~9.1.0",
     "eas-cli": "^0.54.1",
     "expo-cli": "^5.4.11",
