--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
