--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.2",
     "expo": "^45.0.0",
     "expo-splash-screen": "^0.15.1",
@@ -34,6 +35,7 @@
     "react-native": "0.68.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.2.1",
+    "react-native-get-random-values": "~1.8.0",
     "react-native-paper": "^4.12.1",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
@@ -42,7 +44,8 @@
     "react-native-web": "0.17.7",
     "react-redux": "^8.0.2",
     "redux": "^4.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -51,6 +54,7 @@
     "@types/react-native": "~0.67.6",
     "@types/react-redux": "^7.1.24",
     "@types/redux-persist": "^4.3.1",
+    "@types/uuid": "^8.3.4",
     "babel-preset-expo": "~9.1.0",
     "eas-cli": "^0.54.1",
     "expo-cli": "^5.4.11",
