--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-draggable-flatlist": "^3.1.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-get-random-values": "~1.8.0",
     "react-native-paper": "^4.12.1",
