--- a/app.json
+++ b/app.json
@@ -16,6 +16,7 @@
     "description": "Marshall Goldsmith's Daily Engagement Questions as an inofficial app",
     "ios": {
       "bundleIdentifier": "eu.kraenz.dailyquestions"
-    }
+    },
+    "userInterfaceStyle": "automatic"
   }
 }
