--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/datetimepicker": "6.1.2",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/stack": "^6.2.1",
@@ -30,6 +31,7 @@
     "expo-status-bar": "~1.3.0",
     "expo-updates": "^0.13.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
@@ -37,6 +39,7 @@
     "react-native-draggable-flatlist": "^3.1.2",
     "react-native-gesture-handler": "~2.2.1",
     "react-native-get-random-values": "~1.8.0",
+    "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.1",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
