--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "name": "dailyquestions",
   "displayName": "daily-questions",
   "expo": {
-    "name": "daily-questions",
+    "name": "Daily Questions",
     "slug": "daily-questions",
     "orientation": "default",
     "version": "1.2.0",
@@ -11,7 +11,25 @@
     "android": {
       "package": "eu.kraenz.dailyquestions",
       "permissions": [],
-      "versionCode": 2
+      "versionCode": 2,
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/dailies-logo.png"
+      },
+      "icon": "./assets/dailies-logo_legacy.png"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 10000
+    },
+    "icon": "./assets/dailies-logo.png",
+    "splash": {
+      "dark": {
+        "image": "./assets/dailies-splash-dark.png",
+        "resizeMode": "contain",
+        "backgroundColor": "#000000"
+      },
+      "image": "./assets/dailies-splash.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#ffffff"
     },
     "description": "Marshall Goldsmith's Daily Engagement Questions as an inofficial app",
     "ios": {
