--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.2",
     "expo": "^45.0.0",
-    "expo-splash-screen": "^0.15.1",
+    "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "^0.13.2",
     "lodash": "^4.17.21",
