fix(general): app display name name

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "dailyquestions",
-  "displayName": "daily-questions",
+  "displayName": "Daily Questions",
   "expo": {
     "name": "Daily Questions",
     "slug": "daily-questions",
