--- a/app.json
+++ b/app.json
@@ -5,35 +5,45 @@
     "name": "Daily Questions",
     "slug": "daily-questions",
     "orientation": "default",
-    "version": "1.2.0",
+    "version": "1.2.1",
     "assetBundlePatterns": ["**/*"],
     "privacy": "public",
     "android": {
       "package": "eu.kraenz.dailyquestions",
       "permissions": [],
-      "versionCode": 2,
+      "versionCode": 3,
       "adaptiveIcon": {
         "foregroundImage": "./assets/dailies-logo.png"
       },
-      "icon": "./assets/dailies-logo_legacy.png"
+      "icon": "./assets/dailies-logo_legacy.png",
+      "splash": {
+        "dark": {
+          "image": "./assets/dailies-splash-dark.png",
+          "resizeMode": "contain",
+          "backgroundColor": "#000000"
+        },
+        "image": "./assets/dailies-splash.png",
+        "resizeMode": "contain",
+        "backgroundColor": "#ffffff"
+      }
     },
     "updates": {
       "fallbackToCacheTimeout": 10000
     },
     "icon": "./assets/dailies-logo.png",
-    "splash": {
-      "dark": {
-        "image": "./assets/dailies-splash-dark.png",
-        "resizeMode": "contain",
-        "backgroundColor": "#000000"
-      },
-      "image": "./assets/dailies-splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
     "description": "Marshall Goldsmith's Daily Engagement Questions as an inofficial app",
     "ios": {
-      "bundleIdentifier": "eu.kraenz.dailyquestions"
+      "bundleIdentifier": "eu.kraenz.dailyquestions",
+      "splash": {
+        "dark": {
+          "image": "./assets/dailies-splash-dark.png",
+          "resizeMode": "contain",
+          "backgroundColor": "#000000"
+        },
+        "image": "./assets/dailies-splash.png",
+        "resizeMode": "contain",
+        "backgroundColor": "#ffffff"
+      }
     },
     "userInterfaceStyle": "automatic"
   }
