--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build:local": "ANDROID_SDK_ROOT=~/Android/Sdk expo run:android",
     "compile": "tsc",
     "compile:watch": "tsc -w",
-    "test": "jest"
+    "test": "jest",
+    "test:debug": "node --inspect-brk ./node_modules/jest/bin/jest.js --runInBand"
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
@@ -28,6 +29,7 @@
     "@react-navigation/stack": "^6.2.1",
     "@reduxjs/toolkit": "^1.8.2",
     "expo": "^45.0.0",
+    "expo-clipboard": "~3.0.1",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-updates": "^0.13.2",
@@ -54,6 +56,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/jest": "26",
     "@types/lodash": "^4.14.182",
     "@types/react": "~17.0.21",
     "@types/react-native": "~0.67.6",
@@ -63,11 +66,12 @@
     "babel-preset-expo": "~9.1.0",
     "eas-cli": "^0.54.1",
     "expo-cli": "^5.4.11",
+    "jest": "^26.6.3",
     "jest-expo": "^45.0.1",
     "typescript": "^4.7.3"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "jest-expo"
   },
   "private": true
 }
