--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "expo-clipboard": "~3.0.1",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
+    "expo-system-ui": "~1.2.0",
     "expo-updates": "^0.13.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
