--- a/package.json
+++ b/package.json
@@ -34,10 +34,12 @@
     "expo-status-bar": "~1.3.0",
     "expo-system-ui": "~1.2.0",
     "expo-updates": "^0.13.2",
+    "i18next": "^21.8.13",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-i18next": "^11.18.0",
     "react-native": "0.68.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-flatlist": "^3.1.2",
