--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-system-ui": "~1.2.0",
-    "expo-updates": "^0.13.2",
+    "expo-updates": "~0.13.3",
     "i18next": "^21.8.13",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
