--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "expo": "^45.0.0",
     "expo-clipboard": "~3.0.1",
     "expo-localization": "~13.0.0",
+    "expo-notifications": "~0.15.4",
+    "expo-permissions": "~13.2.0",
     "expo-splash-screen": "~0.15.1",
     "expo-status-bar": "~1.3.0",
     "expo-system-ui": "~1.2.0",
