--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "ios": "react-native run-ios",
     "web": "expo start --web",
     "start": "expo start --dev-client",
+    "eas:build": "tsc --noEmit && eas build --platform android",
     "dev": "expo start",
     "dev:clear-cache": "expo start --clear",
     "deploy": "expo build:android",
