--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "license": "MIT",
   "main": "index.js",
+  "author": "Mirco Kraenz",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
