--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo-status-bar": "~1.3.0",
     "expo-system-ui": "~1.2.0",
     "expo-updates": "~0.13.3",
+    "fuse.js": "^6.6.2",
     "i18next": "^21.8.13",
     "lodash": "^4.17.21",
     "moment": "^2.29.3",
@@ -54,7 +55,7 @@
     "react-native-gesture-handler": "~2.2.1",
     "react-native-get-random-values": "~1.8.0",
     "react-native-modal-datetime-picker": "^13.1.2",
-    "react-native-paper": "^4.12.1",
+    "react-native-paper": "^4.12.4",
     "react-native-reanimated": "~2.8.0",
     "react-native-safe-area-context": "4.2.4",
     "react-native-screens": "~3.11.1",
