--- a/package.json
+++ b/package.json
@@ -23,60 +23,60 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/datetimepicker": "6.1.2",
-    "@react-navigation/drawer": "^6.4.1",
-    "@react-navigation/native": "^6.0.10",
-    "@react-navigation/stack": "^6.2.1",
-    "@reduxjs/toolkit": "^1.8.2",
-    "expo": "^45.0.0",
-    "expo-clipboard": "~3.0.1",
-    "expo-localization": "~13.0.0",
-    "expo-notifications": "~0.15.4",
+    "@react-native-community/datetimepicker": "6.2.0",
+    "@react-navigation/drawer": "^6.5.0",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.1",
+    "@reduxjs/toolkit": "^1.8.5",
+    "expo": "^46.0.0",
+    "expo-clipboard": "~3.1.0",
+    "expo-localization": "~13.1.0",
+    "expo-notifications": "~0.16.1",
     "expo-permissions": "~13.2.0",
-    "expo-splash-screen": "~0.15.1",
-    "expo-status-bar": "~1.3.0",
-    "expo-system-ui": "~1.2.0",
-    "expo-updates": "~0.13.3",
+    "expo-splash-screen": "~0.16.2",
+    "expo-status-bar": "~1.4.0",
+    "expo-system-ui": "~1.3.0",
+    "expo-updates": "~0.14.6",
     "fuse.js": "^6.6.2",
     "i18next": "^21.8.13",
     "lodash": "^4.17.21",
-    "moment": "^2.29.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "moment": "^2.29.4",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
     "react-i18next": "^11.18.0",
-    "react-native": "0.68.2",
+    "react-native": "0.69.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-flatlist": "^3.1.2",
-    "react-native-gesture-handler": "~2.2.1",
+    "react-native-gesture-handler": "~2.5.0",
     "react-native-get-random-values": "~1.8.0",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.4",
-    "react-native-reanimated": "~2.8.0",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-screens": "~3.11.1",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
     "react-native-svg": "12.3.0",
-    "react-native-web": "0.17.7",
-    "react-redux": "^8.0.2",
+    "react-native-web": "~0.18.7",
+    "react-redux": "^8.0.4",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.18.6",
     "@types/jest": "26",
-    "@types/lodash": "^4.14.182",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.67.6",
+    "@types/lodash": "^4.14.185",
+    "@types/react": "~18.0.0",
+    "@types/react-native": "~0.69.1",
     "@types/react-redux": "^7.1.24",
     "@types/redux-persist": "^4.3.1",
     "@types/uuid": "^8.3.4",
-    "babel-preset-expo": "~9.1.0",
+    "babel-preset-expo": "~9.2.0",
     "eas-cli": "^2.1.0",
     "expo-cli": "^6.0.6",
     "jest": "^26.6.3",
-    "jest-expo": "^45.0.1",
+    "jest-expo": "^46.0.0",
     "license-report": "^6.0.0",
-    "typescript": "^4.7.3"
+    "typescript": "^4.6.3"
   },
   "jest": {
     "preset": "jest-expo"
