--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "@babel/core": "^7.18.6",
     "@types/jest": "26",
     "@types/lodash": "^4.14.185",
-    "@types/react": "~18.0.0",
+    "@types/react": "^17.0.0",
     "@types/react-native": "~0.69.1",
     "@types/react-redux": "^7.1.24",
     "@types/redux-persist": "^4.3.1",
@@ -77,6 +77,10 @@
     "jest-expo": "^46.0.0",
     "license-report": "^6.0.0",
     "typescript": "^4.6.3"
+  },
+  "resolutions": {
+    "@types/react": "^17.0.2",
+    "@types/react-dom": "^17.0.2"
   },
   "jest": {
     "preset": "jest-expo"
