chore(#13): upgrade to expo 48
upgrade done as described here
https://blog.expo.dev/expo-sdk-48-ccb8302e231

fix: ts issues due to react removing children from props
fix: install expo-crypto to fix Promise rejection on startup due to missing getRandomValues
(not sure where the call to getRandomValues came from)

--- a/app.json
+++ b/app.json
@@ -45,7 +45,8 @@
         {
           "icon": "./assets/notification-icon.png"
         }
-      ]
+      ],
+      "expo-localization"
     ],
     "extra": {
       "eas": {
