--- a/package.json
+++ b/package.json
@@ -22,40 +22,41 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "~1.17.3",
-    "@react-native-community/datetimepicker": "6.5.2",
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/drawer": "^6.5.0",
     "@react-navigation/native": "^6.0.13",
     "@react-navigation/stack": "^6.3.1",
     "@reduxjs/toolkit": "^1.8.5",
-    "expo": "^47.0.0",
-    "expo-clipboard": "~4.0.1",
-    "expo-localization": "~14.0.0",
-    "expo-notifications": "~0.17.0",
-    "expo-permissions": "~14.0.0",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "expo-system-ui": "~2.0.1",
-    "expo-updates": "~0.15.6",
+    "expo": "^48.0.0",
+    "expo-clipboard": "~4.1.2",
+    "expo-crypto": "~12.2.1",
+    "expo-localization": "~14.1.1",
+    "expo-notifications": "~0.18.1",
+    "expo-permissions": "~14.1.1",
+    "expo-splash-screen": "~0.18.1",
+    "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "~2.2.1",
+    "expo-updates": "~0.16.3",
     "fuse.js": "^6.6.2",
     "i18next": "^21.8.13",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-i18next": "^11.18.0",
-    "react-native": "0.70.5",
+    "react-native": "0.71.4",
     "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-flatlist": "^3.1.2",
-    "react-native-gesture-handler": "~2.8.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-get-random-values": "~1.8.0",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.4",
-    "react-native-reanimated": "~2.12.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.7",
+    "react-native-web": "~0.18.10",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
@@ -65,17 +66,15 @@
     "@babel/core": "^7.19.3",
     "@types/jest": "26",
     "@types/lodash": "^4.14.185",
-    "@types/react": "^17.0.0",
-    "@types/react-native": "~0.70.6",
+    "@types/react": "~18.0.27",
     "@types/redux-persist": "^4.3.1",
     "@types/uuid": "^8.3.4",
-    "babel-preset-expo": "~9.2.1",
-    "eas-cli": "^2.1.0",
-    "expo-cli": "^6.3.1",
-    "jest": "^26.6.3",
+    "babel-preset-expo": "^9.3.0",
+    "eas-cli": "^3.8.1",
+    "jest": "^29.2.1",
     "jest-expo": "^47.0.0",
     "license-report": "^6.0.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.9.4"
   },
   "resolutions": {
     "@types/react": "^17.0.50",
