--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
-    "@react-navigation/drawer": "^6.5.0",
-    "@react-navigation/native": "^6.0.13",
-    "@react-navigation/stack": "^6.3.1",
-    "@reduxjs/toolkit": "^1.8.5",
+    "@react-navigation/drawer": "^6.6.2",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/stack": "^6.3.16",
+    "@reduxjs/toolkit": "^1.9.3",
     "expo": "^48.0.0",
     "expo-clipboard": "~4.1.2",
     "expo-crypto": "~12.2.1",
@@ -47,9 +47,8 @@
     "react-i18next": "^11.18.0",
     "react-native": "0.71.4",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-draggable-flatlist": "^3.1.2",
+    "react-native-draggable-flatlist": "^4.0.1",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-get-random-values": "~1.8.0",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^4.12.4",
     "react-native-reanimated": "~2.14.4",
@@ -59,8 +58,7 @@
     "react-native-web": "~0.18.10",
     "react-redux": "^8.0.4",
     "redux": "^4.2.0",
-    "redux-persist": "^6.0.0",
-    "uuid": "^8.3.2"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
@@ -68,7 +66,6 @@
     "@types/lodash": "^4.14.185",
     "@types/react": "~18.0.27",
     "@types/redux-persist": "^4.3.1",
-    "@types/uuid": "^8.3.4",
     "babel-preset-expo": "^9.3.0",
     "eas-cli": "^3.8.1",
     "jest": "^29.2.1",
