--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@reduxjs/toolkit": "^1.9.3",
     "expo": "^48.0.0",
     "expo-clipboard": "~4.1.2",
+    "expo-constants": "^14.2.1",
     "expo-crypto": "~12.2.1",
     "expo-localization": "~14.1.1",
     "expo-notifications": "~0.18.1",
