--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-i18next": "^11.18.0",
     "react-native": "0.71.4",
     "react-native-chart-kit": "^6.12.0",
@@ -59,7 +60,8 @@
     "react-native-web": "~0.18.10",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
