--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@hookform/resolvers": "^3.1.0",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-navigation/drawer": "^6.6.2",
