--- a/package.json
+++ b/package.json
@@ -22,23 +22,23 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
-    "expo": "^48.0.0",
-    "expo-clipboard": "~4.1.2",
-    "expo-constants": "^14.2.1",
-    "expo-crypto": "~12.2.1",
-    "expo-localization": "~14.1.1",
-    "expo-notifications": "~0.18.1",
-    "expo-permissions": "~14.1.1",
-    "expo-splash-screen": "~0.18.1",
-    "expo-status-bar": "~1.4.4",
-    "expo-system-ui": "~2.2.1",
-    "expo-updates": "~0.16.3",
+    "expo": "^49.0.0",
+    "expo-clipboard": "~4.3.1",
+    "expo-constants": "~14.4.2",
+    "expo-crypto": "~12.4.1",
+    "expo-localization": "~14.3.0",
+    "expo-notifications": "~0.20.1",
+    "expo-permissions": "~14.2.1",
+    "expo-splash-screen": "~0.20.5",
+    "expo-status-bar": "~1.6.0",
+    "expo-system-ui": "~2.4.0",
+    "expo-updates": "~0.18.19",
     "fuse.js": "^6.6.2",
     "i18next": "^21.8.13",
     "lodash": "^4.17.21",
@@ -46,17 +46,18 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^11.18.0",
-    "react-native": "0.71.4",
+    "react-native": "0.72.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-flatlist": "^4.0.1",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-modal-datetime-picker": "^13.1.2",
-    "react-native-paper": "^4.12.4",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0",
-    "react-native-web": "~0.18.10",
+    "react-native-paper": "^5.12.1",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "~4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
+    "react-native-vector-icons": "^10.0.3",
+    "react-native-web": "~0.19.6",
     "react-redux": "^8.0.5",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0"
@@ -65,14 +66,14 @@
     "@babel/core": "^7.19.3",
     "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.185",
-    "@types/react": "~18.0.27",
+    "@types/react": "~18.2.14",
     "@types/redux-persist": "^4.3.1",
-    "babel-preset-expo": "^9.3.1",
-    "eas-cli": "^3.8.1",
+    "babel-preset-expo": "^9.5.0",
+    "eas-cli": "^7.0.0",
     "jest": "^29.2.1",
-    "jest-expo": "^48.0.2",
+    "jest-expo": "~49.0.0",
     "license-report": "^6.0.0",
-    "typescript": "^4.9.4"
+    "typescript": "^5.1.3"
   },
   "jest": {
     "preset": "jest-expo"
