--- a/package.json
+++ b/package.json
@@ -21,24 +21,25 @@
     "generate:used-licenses": "license-report --output=json --config license-report.config.json --only=prod > ./src/generated/prod-licenses.json"
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
-    "@react-native-community/datetimepicker": "7.2.0",
+    "@expo/metro-runtime": "^3.1.1",
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
+    "@react-native-community/datetimepicker": "7.6.1",
     "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "@reduxjs/toolkit": "^1.9.3",
-    "expo": "^49.0.0",
-    "expo-clipboard": "~4.3.1",
-    "expo-constants": "~14.4.2",
-    "expo-crypto": "~12.4.1",
-    "expo-localization": "~14.3.0",
-    "expo-notifications": "~0.20.1",
+    "expo": "^50.0.0",
+    "expo-clipboard": "~5.0.1",
+    "expo-constants": "~15.4.5",
+    "expo-crypto": "~12.8.0",
+    "expo-localization": "~14.8.3",
+    "expo-notifications": "~0.27.4",
     "expo-permissions": "~14.2.1",
-    "expo-splash-screen": "~0.20.5",
-    "expo-status-bar": "~1.6.0",
-    "expo-system-ui": "~2.4.0",
-    "expo-updates": "~0.18.19",
+    "expo-splash-screen": "~0.26.3",
+    "expo-status-bar": "~1.11.1",
+    "expo-system-ui": "~2.9.3",
+    "expo-updates": "~0.24.8",
     "fuse.js": "^6.6.2",
     "i18next": "^21.8.13",
     "lodash": "^4.17.21",
@@ -46,16 +47,16 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^11.18.0",
-    "react-native": "0.72.6",
+    "react-native": "0.73.2",
     "react-native-chart-kit": "^6.12.0",
     "react-native-draggable-flatlist": "^4.0.1",
-    "react-native-gesture-handler": "~2.12.0",
+    "react-native-gesture-handler": "~2.14.0",
     "react-native-modal-datetime-picker": "^13.1.2",
     "react-native-paper": "^5.12.1",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-safe-area-context": "~4.6.3",
-    "react-native-screens": "~3.22.0",
-    "react-native-svg": "13.9.0",
+    "react-native-reanimated": "~3.6.0",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-svg": "14.1.0",
     "react-native-vector-icons": "^10.0.3",
     "react-native-web": "~0.19.6",
     "react-redux": "^8.0.5",
@@ -68,10 +69,10 @@
     "@types/lodash": "^4.14.185",
     "@types/react": "~18.2.14",
     "@types/redux-persist": "^4.3.1",
-    "babel-preset-expo": "^9.5.0",
+    "babel-preset-expo": "^10.0.0",
     "eas-cli": "^7.0.0",
     "jest": "^29.2.1",
-    "jest-expo": "~49.0.0",
+    "jest-expo": "~50.0.1",
     "license-report": "^6.0.0",
     "typescript": "^5.1.3"
   },
